--- a/CrossSellPredictionML.ipynb
+++ b/CrossSellPredictionML.ipynb
@@ -129,7 +129,7 @@
       "source": [
         "I'm going to have a briefly look at the data.\n",
         "\n",
-        "NB! Policy sales channel is anonymised. It is a code for the channel of outreaching the customer: different agents, over mail, over phone, in persona, ads."
+        "Policy sales channel has been anonymised. Actually it is a code for the channel of outreaching the customer: different agents, over mail, over phone, in persona, ads."
       ],
       "metadata": {
         "id": "BlSsrFDQCc2I"
@@ -698,9 +698,9 @@
       "cell_type": "markdown",
       "source": [
         "## Feature Engineering \n",
-        "It is a work of art in data science and machine learning. It creates features from existing raw data in order to incrememnt the predictive power of the machine learning algorithms.\n",
+        "Feature Engineering is a work of art in data science and machine learning. It creates features from existing raw data in order to incrememnt the predictive power of the machine learning algorithms.\n",
         "\n",
-        "I created new features using different strategic combinations of existing variables:\n",
+        "I'm going to create new features using different strategic combinations of existing variables:\n",
         "1. Mean premium damage\n",
         "2. Mean premium vehicle age\n",
         "3. Mean premium per Region code\n",
